Reduce spacing and fix nav padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,11 +71,14 @@ body {
 nav a {
     color: var(--text-color);
     padding-right: 10px;
+    padding-left: 10px;
+}
+nav a:first-child {
+    padding-left: 0;
 }
 
 .content-body {
     flex-grow: 1;
-    margin-top: 25px;
 
     h1:first-child {
         margin-top: 0;
@@ -87,13 +90,16 @@ a {
 }
 
 h1, h2, h3, h4 {
-    margin-top: 25px;
     margin-bottom: 0px;
     color: var(--accent-color);
 }
 
 h3, h4, h3 a, h4 a {
     color: var(--accent-secondary-color);
+}
+
+p {
+    margin-top: 8px;
 }
 
 .post {
